removed some includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,4 +39,4 @@ add_subdirectory(src)
 target_include_directories(BBEngine PRIVATE include)
 target_include_directories(BBEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-target_link_libraries(BBEngine PUBLIC glad glfw assimp SFML::Network RmlUi::Core RmlUi::Debugger glm::glm)
+target_link_libraries(BBEngine PRIVATE glad glfw assimp SFML::Network RmlUi::Core RmlUi::Debugger PUBLIC glm::glm)
